--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li><a href="https://github.com/necroit" target="_blank" rel="noopener noreferrer">🖥️GitHub</a></li>
     <li><a href="https://t.me/necroit" target="_blank" rel="noopener noreferrer">💬Telegram</a></li>
     <li><a href="https://discord.com/users/1355539557369774306" target="_blank" rel="noopener noreferrer">🎮Discord</a></li>
+    <li><a href="https://discord.com/invite/Ym97ApF6Ha" target="_blank" rel="noopener noreferrer">🎮Discord Server</a></li>
   </ul>
 </div>
 
