--- a/necroit_single_1000.html
+++ b/necroit_single_1000.html
@@ -150,7 +150,7 @@ a:hover {
     <span>      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
         <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.2.8-.5v-2c-3.2.7-3.9-1.5-3.9-1.5-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1.6 1.9 2.6 1.9 1.4 0 2.2-.7 2.5-1.3.1-.6.4-1 .7-1.2-2.5-.3-5.2-1.3-5.2-5.8 0-1.3.5-2.3 1.1-3.2-.1-.3-.5-1.6.1-3.2 0 0 .9-.3 3.1 1.2a10.4 10.4 0 0 1 5.6 0c2.2-1.5 3.1-1.2 3.1-1.2.6 1.6.2 2.9.1 3.2.7.9 1.1 2 1.1 3.2 0 4.6-2.7 5.4-5.2 5.8.4.3.7.9.7 1.8v2.7c0 .3.2.6.8.5 4.6-1.5 7.9-5.8 7.9-10.9C23.5 5.65 18.35.5 12 .5Z"/>
       </svg> GitHub</span>
-    <a href="https://github.com/" target="_blank" rel="noopener">
+    <a href="https://github.com/necroit" target="_blank" rel="noopener">
 Click Me 
     </a>
   </div>
@@ -159,7 +159,7 @@ Click Me
     <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
         <path d="M9.93 16.58 9.8 20c.34 0 .49-.15.66-.33l1.59-1.53 3.3 2.42c.61.34 1.05.16 1.21-.57l2.2-10.34c.2-.94-.34-1.3-.95-1.07l-13 5.02c-.89.34-.87.82-.15 1.04l3.33 1.04 7.72-4.88c.36-.24.69-.11.42.14l-6.7 6.06Z"/>
       </svg> Telegram</span>
-    <a href="https://t.me/" target="_blank" rel="noopener">
+    <a href="https://t.me/necroit" target="_blank" rel="noopener">
       Click Me 
     </a>
   </div>
@@ -168,7 +168,7 @@ Click Me
     <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
         <path d="M20 4a19.8 19.8 0 0 0-4.9-1.5l-.2.4c2.4.6 3.5 1.5 3.5 1.5a14.8 14.8 0 0 0-5.2-1.6 14.8 14.8 0 0 0-5.2 1.6s1.1-.9 3.5-1.5l-.2-.4A19.8 19.8 0 0 0 4 4s-3 4.4-3 12a19.6 19.6 0 0 0 6.1 1.9l.8-1.1c-2.5-.7-3.4-2.2-3.4-2.2.3.2.8.5.8.5 2.4 1.1 4.6 1 5.5 1 .9 0 3.1.1 5.5-1 0 0 .5-.3.8-.5 0 0-.9 1.5-3.4 2.2l.8 1.1A19.6 19.6 0 0 0 23 16c0-7.6-3-12-3-12ZM9.3 13.8c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Zm5.4 0c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Z"/>
       </svg> Discord</span>
-    <a href="https://discord.com/" target="_blank" rel="noopener">
+    <a href="https://discord.com/users/1355539557369774306" target="_blank" rel="noopener">
       Click Me 
     </a>
   </div>
@@ -177,7 +177,7 @@ Click Me
     <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
         <path d="M20 4a19.8 19.8 0 0 0-4.9-1.5l-.2.4c2.4.6 3.5 1.5 3.5 1.5a14.8 14.8 0 0 0-5.2-1.6 14.8 14.8 0 0 0-5.2 1.6s1.1-.9 3.5-1.5l-.2-.4A19.8 19.8 0 0 0 4 4s-3 4.4-3 12a19.6 19.6 0 0 0 6.1 1.9l.8-1.1c-2.5-.7-3.4-2.2-3.4-2.2.3.2.8.5.8.5 2.4 1.1 4.6 1 5.5 1 .9 0 3.1.1 5.5-1 0 0 .5-.3.8-.5 0 0-.9 1.5-3.4 2.2l.8 1.1A19.6 19.6 0 0 0 23 16c0-7.6-3-12-3-12ZM9.3 13.8c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Zm5.4 0c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Z"/>
       </svg> Discord Server</span>
-        <a href="https://discord.com/" target="_blank" rel="noopener">
+        <a href="https://discord.gg/Ym97ApF6Ha" target="_blank" rel="noopener">
       Click Me 
     </a>
   </div>
