--- a/necroit_single_1000.html
+++ b/necroit_single_1000.html
@@ -181,6 +181,18 @@ Click Me
       Click Me 
     </a>
   </div>
+
+  <div class="line">
+  <span>
+    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
+      <path d="M21.6 6.3c-.3-.4-.8-.6-1.3-.6-.5 0-.9.2-1.2.5-.3.3-.4.7-.4 1.1s.1.8.4 1.1c.3.3.7.5 1.2.5.5 0 1-.2 1.3-.6.3-.4.4-.8.4-1.1s-.1-.8-.4-1.1zM11 13.5l-1.3 3.5 3.4 1.3 1.3-3.5-3.4-1.3zm8.1-6.6c-.7-1.2-1.9-2-3.3-2.2-1.4-.2-2.8.4-3.7 1.5l-7.4 7.4c-.4.4-.6.9-.6 1.4s.2 1 .6 1.4c.4.4.9.6 1.4.6s1-.2 1.4-.6l7.4-7.4c.9-.9 1.2-2.2.7-3.3z"/>
+    </svg>
+    Steam
+  </span>
+  <a href="https://steamcommunity.com/id/necroit" target="_blank" rel="noopener">
+    Click Me
+  </a>
+</div>
 </div>
 
 </div>
