--- a/necroit_single_1000.html
+++ b/necroit_single_1000.html
@@ -81,7 +81,7 @@ canvas {
   border-radius:12px;
   backdrop-filter: blur(12px) saturate(180%);
   -webkit-backdrop-filter: blur(12px) saturate(180%);
-  padding:20px 30px;
+  padding: 20px 30px 10px 30px; /* снизу 10px вместо 20px */
   width:360px;
   box-sizing:border-box;
   opacity:0;
@@ -151,7 +151,7 @@ a:hover {
         <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.2.8-.5v-2c-3.2.7-3.9-1.5-3.9-1.5-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1.6 1.9 2.6 1.9 1.4 0 2.2-.7 2.5-1.3.1-.6.4-1 .7-1.2-2.5-.3-5.2-1.3-5.2-5.8 0-1.3.5-2.3 1.1-3.2-.1-.3-.5-1.6.1-3.2 0 0 .9-.3 3.1 1.2a10.4 10.4 0 0 1 5.6 0c2.2-1.5 3.1-1.2 3.1-1.2.6 1.6.2 2.9.1 3.2.7.9 1.1 2 1.1 3.2 0 4.6-2.7 5.4-5.2 5.8.4.3.7.9.7 1.8v2.7c0 .3.2.6.8.5 4.6-1.5 7.9-5.8 7.9-10.9C23.5 5.65 18.35.5 12 .5Z"/>
       </svg> GitHub</span>
     <a href="https://github.com/necroit" target="_blank" rel="noopener">
-Click Me 
+     git.necroit 
     </a>
   </div>
 
@@ -160,7 +160,7 @@ Click Me
         <path d="M9.93 16.58 9.8 20c.34 0 .49-.15.66-.33l1.59-1.53 3.3 2.42c.61.34 1.05.16 1.21-.57l2.2-10.34c.2-.94-.34-1.3-.95-1.07l-13 5.02c-.89.34-.87.82-.15 1.04l3.33 1.04 7.72-4.88c.36-.24.69-.11.42.14l-6.7 6.06Z"/>
       </svg> Telegram</span>
     <a href="https://t.me/necroit" target="_blank" rel="noopener">
-      Click Me 
+      tg.necroit 
     </a>
   </div>
 
@@ -169,32 +169,55 @@ Click Me
         <path d="M20 4a19.8 19.8 0 0 0-4.9-1.5l-.2.4c2.4.6 3.5 1.5 3.5 1.5a14.8 14.8 0 0 0-5.2-1.6 14.8 14.8 0 0 0-5.2 1.6s1.1-.9 3.5-1.5l-.2-.4A19.8 19.8 0 0 0 4 4s-3 4.4-3 12a19.6 19.6 0 0 0 6.1 1.9l.8-1.1c-2.5-.7-3.4-2.2-3.4-2.2.3.2.8.5.8.5 2.4 1.1 4.6 1 5.5 1 .9 0 3.1.1 5.5-1 0 0 .5-.3.8-.5 0 0-.9 1.5-3.4 2.2l.8 1.1A19.6 19.6 0 0 0 23 16c0-7.6-3-12-3-12ZM9.3 13.8c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Zm5.4 0c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Z"/>
       </svg> Discord</span>
     <a href="https://discord.com/users/1355539557369774306" target="_blank" rel="noopener">
-      Click Me 
+      ds.necrosuit 
     </a>
   </div>
 
   <div class="line">
     <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
         <path d="M20 4a19.8 19.8 0 0 0-4.9-1.5l-.2.4c2.4.6 3.5 1.5 3.5 1.5a14.8 14.8 0 0 0-5.2-1.6 14.8 14.8 0 0 0-5.2 1.6s1.1-.9 3.5-1.5l-.2-.4A19.8 19.8 0 0 0 4 4s-3 4.4-3 12a19.6 19.6 0 0 0 6.1 1.9l.8-1.1c-2.5-.7-3.4-2.2-3.4-2.2.3.2.8.5.8.5 2.4 1.1 4.6 1 5.5 1 .9 0 3.1.1 5.5-1 0 0 .5-.3.8-.5 0 0-.9 1.5-3.4 2.2l.8 1.1A19.6 19.6 0 0 0 23 16c0-7.6-3-12-3-12ZM9.3 13.8c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Zm5.4 0c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Z"/>
-      </svg> Discord Server</span>
+      </svg> Server</span>
         <a href="https://discord.gg/Ym97ApF6Ha" target="_blank" rel="noopener">
-      Click Me 
+      com.XenoGem 
     </a>
   </div>
 
-  <div class="line">
+<div class="line">
   <span>
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
-      <path d="M21.6 6.3c-.3-.4-.8-.6-1.3-.6-.5 0-.9.2-1.2.5-.3.3-.4.7-.4 1.1s.1.8.4 1.1c.3.3.7.5 1.2.5.5 0 1-.2 1.3-.6.3-.4.4-.8.4-1.1s-.1-.8-.4-1.1zM11 13.5l-1.3 3.5 3.4 1.3 1.3-3.5-3.4-1.3zm8.1-6.6c-.7-1.2-1.9-2-3.3-2.2-1.4-.2-2.8.4-3.7 1.5l-7.4 7.4c-.4.4-.6.9-.6 1.4s.2 1 .6 1.4c.4.4.9.6 1.4.6s1-.2 1.4-.6l7.4-7.4c.9-.9 1.2-2.2.7-3.3z"/>
+    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 512 512">
+      <!-- Джойстик -->
+      <path d="M256 48c-88.4 0-160 71.6-160 160s71.6 160 160 160 160-71.6 160-160S344.4 48 256 48zm-48 120c0-13.3 10.7-24 24-24s24 10.7 24 24-10.7 24-24 24-24-10.7-24-24zm96 64h-48c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h48c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16z"/>
     </svg>
     Steam
   </span>
-  <a href="https://steamcommunity.com/id/necroit" target="_blank" rel="noopener">
-    Click Me
+  <a href="https://steamcommunity.com/id/necrosuit" target="_blank" rel="noopener">
+    stm.necroit
   </a>
 </div>
+<style>
+.line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.line span {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-family: 'Courier New', monospace;
+  color: #00ff00;
+}
+.line a {
+  color: #00ff00;
+  text-decoration: none;
+  font-family: 'Courier New', monospace;
+}
+.line a:hover {
+  text-decoration: underline;
+}
+</style>
 </div>
-
 </div>
 
 <audio id="bgMusic" preload="auto">
@@ -368,7 +391,7 @@ function startSite() {
   setTimeout(()=>panel.classList.add('visible'), 120);
 
   if (music) {
-    music.volume = 0.3;
+    music.volume = 0.1;
     const playPromise = music.play();
     if (playPromise !== undefined) {
       playPromise.then(()=> { musicStatus.style.display = 'block'; })
