Update musicStatus div content in index.html

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ a:hover {
   Ваш браузер не поддерживает аудио.
 </audio>
 
-<div id="musicStatus" aria-hidden="true" style="display:none">music$virtual-love</div>
+<div id="musicStatus" aria-hidden="true" style="display:none">music$mirrors-demo</div>
 
 <script>
 const preloader = document.getElementById('preloader');
