--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@ html, body {
   padding:0;
   height:100%;
   overflow:hidden;
-  background:#0b0b0d;
+  background:#1a1a1a;
   font-family: 'Courier New', monospace;
-  color:#00ff00;
+  color:#cccccc;
   cursor:none;
 }
-
 .site {
   width:100%;
   height:100%;
@@ -25,40 +24,35 @@ html, body {
   align-items:center;
   transition: filter 0.5s ease, opacity 0.5s ease;
 }
-
 .site.preload-active {
   filter: blur(8px);
   pointer-events: none;
 }
-
 #preloader {
   position:fixed;
   inset:0;
   display:flex;
   justify-content:center;
   align-items:center;
-  background: rgba(3,3,3,0.6);
+  background: rgba(20,20,20,0.6);
   backdrop-filter: blur(6px);
   z-index: 9999;
-  color: #00ff00;
+  color: #cccccc;
   user-select:none;
   -webkit-user-select:none;
   cursor:pointer;
   flex-direction:column;
 }
-
 #preloader .title {
   font-size:64px;
   letter-spacing:4px;
   margin-bottom:12px;
   font-weight:700;
 }
-
 #preloader .subtitle {
   font-size:14px;
   opacity:0.85;
 }
-
 canvas {
   position:fixed;
   top:0;
@@ -67,21 +61,19 @@ canvas {
   height:100%;
   pointer-events:none;
 }
-
 #cursorCanvas { z-index:2; }
-
 .panel {
   position:absolute;
   top:50%;
   left:50%;
   transform: translate(-50%, -50%) scale(0.95);
   z-index:1;
-  background: rgba(10,10,10,0.4);
-  border:2px solid rgba(0,255,0,0.5);
+  background: rgba(40,40,40,0.7);
+  border:2px solid rgba(180,180,180,0.5);
   border-radius:12px;
   backdrop-filter: blur(12px) saturate(180%);
   -webkit-backdrop-filter: blur(12px) saturate(180%);
-  padding: 20px 30px 10px 30px; /* снизу 10px вместо 20px */
+  padding: 20px 30px 10px 30px;
   width:360px;
   box-sizing:border-box;
   opacity:0;
@@ -89,42 +81,35 @@ canvas {
   pointer-events:none;
   transition: opacity 0.8s ease, transform 0.8s ease, filter 0.8s ease;
 }
-
 .panel.visible {
   opacity:1;
   filter: blur(0);
   transform: translate(-50%, -50%) scale(1);
   pointer-events:auto;
 }
-
 .panel:hover {
   transform: translate(-50%, -50%) scale(1.05);
 }
-
 .line {
   display:flex;
   justify-content: space-between;
   margin-bottom:10px;
 }
-
 .line:last-child { margin-bottom:0; }
-
 a {
-  color:#00ff00;
+  color:#cccccc;
   text-decoration:none;
   cursor:none;
 }
-
 a:hover {
   text-decoration:underline;
 }
-
 #musicStatus {
   position:fixed;
   bottom:12px;
   right:12px;
   font-size:12px;
-  color:#00ff00;
+  color:#cccccc;
   opacity:0.9;
   z-index:2000;
   pointer-events:none;
@@ -132,127 +117,58 @@ a:hover {
 </style>
 </head>
 <body>
-
 <div id="preloader" aria-hidden="false">
   <div class="title">Welcome</div>
   <div class="subtitle">Нажмите в любом месте, чтобы продолжить</div>
 </div>
-
 <div class="site preload-active" id="site">
   <canvas id="bgCanvas"></canvas>
   <canvas id="cursorCanvas"></canvas>
-
   <div class="panel" id="terminalPanel">
-
-
-
-  <div class="line">
-    <span>      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
-        <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.2.8-.5v-2c-3.2.7-3.9-1.5-3.9-1.5-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1.6 1.9 2.6 1.9 1.4 0 2.2-.7 2.5-1.3.1-.6.4-1 .7-1.2-2.5-.3-5.2-1.3-5.2-5.8 0-1.3.5-2.3 1.1-3.2-.1-.3-.5-1.6.1-3.2 0 0 .9-.3 3.1 1.2a10.4 10.4 0 0 1 5.6 0c2.2-1.5 3.1-1.2 3.1-1.2.6 1.6.2 2.9.1 3.2.7.9 1.1 2 1.1 3.2 0 4.6-2.7 5.4-5.2 5.8.4.3.7.9.7 1.8v2.7c0 .3.2.6.8.5 4.6-1.5 7.9-5.8 7.9-10.9C23.5 5.65 18.35.5 12 .5Z"/>
-      </svg> GitHub</span>
-    <a href="https://github.com/necroit" target="_blank" rel="noopener">
-     git.necroit 
-    </a>
+    <div class="line">
+      GitHub: <a href="https://github.com/necroit" target="_blank" rel="noopener">git.necroit</a>
+    </div>
+    <div class="line">
+      Telegram: <a href="https://t.me/necroit" target="_blank" rel="noopener">tg.necroit</a>
+    </div>
+    <div class="line">
+      Discord: <a href="https://discord.com/users/1355539557369774306" target="_blank" rel="noopener">ds.necrosuit</a>
+    </div>
+    <div class="line">
+      Server: <a href="https://discord.gg/Ym97ApF6Ha" target="_blank" rel="noopener">com.XenoGem</a>
+    </div>
+    <div class="line">
+      Steam: <a href="https://steamcommunity.com/id/necrosuit" target="_blank" rel="noopener">stm.necroit</a>
+    </div>
   </div>
-
-  <div class="line">
-    <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
-        <path d="M9.93 16.58 9.8 20c.34 0 .49-.15.66-.33l1.59-1.53 3.3 2.42c.61.34 1.05.16 1.21-.57l2.2-10.34c.2-.94-.34-1.3-.95-1.07l-13 5.02c-.89.34-.87.82-.15 1.04l3.33 1.04 7.72-4.88c.36-.24.69-.11.42.14l-6.7 6.06Z"/>
-      </svg> Telegram</span>
-    <a href="https://t.me/necroit" target="_blank" rel="noopener">
-      tg.necroit 
-    </a>
-  </div>
-
-  <div class="line">
-    <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
-        <path d="M20 4a19.8 19.8 0 0 0-4.9-1.5l-.2.4c2.4.6 3.5 1.5 3.5 1.5a14.8 14.8 0 0 0-5.2-1.6 14.8 14.8 0 0 0-5.2 1.6s1.1-.9 3.5-1.5l-.2-.4A19.8 19.8 0 0 0 4 4s-3 4.4-3 12a19.6 19.6 0 0 0 6.1 1.9l.8-1.1c-2.5-.7-3.4-2.2-3.4-2.2.3.2.8.5.8.5 2.4 1.1 4.6 1 5.5 1 .9 0 3.1.1 5.5-1 0 0 .5-.3.8-.5 0 0-.9 1.5-3.4 2.2l.8 1.1A19.6 19.6 0 0 0 23 16c0-7.6-3-12-3-12ZM9.3 13.8c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Zm5.4 0c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Z"/>
-      </svg> Discord</span>
-    <a href="https://discord.com/users/1355539557369774306" target="_blank" rel="noopener">
-      ds.necrosuit 
-    </a>
-  </div>
-
-  <div class="line">
-    <span><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 24 24">
-        <path d="M20 4a19.8 19.8 0 0 0-4.9-1.5l-.2.4c2.4.6 3.5 1.5 3.5 1.5a14.8 14.8 0 0 0-5.2-1.6 14.8 14.8 0 0 0-5.2 1.6s1.1-.9 3.5-1.5l-.2-.4A19.8 19.8 0 0 0 4 4s-3 4.4-3 12a19.6 19.6 0 0 0 6.1 1.9l.8-1.1c-2.5-.7-3.4-2.2-3.4-2.2.3.2.8.5.8.5 2.4 1.1 4.6 1 5.5 1 .9 0 3.1.1 5.5-1 0 0 .5-.3.8-.5 0 0-.9 1.5-3.4 2.2l.8 1.1A19.6 19.6 0 0 0 23 16c0-7.6-3-12-3-12ZM9.3 13.8c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Zm5.4 0c-1 0-1.8-.9-1.8-2s.8-2 1.8-2c1 0 1.8.9 1.8 2s-.8 2-1.8 2Z"/>
-      </svg> Server</span>
-        <a href="https://discord.gg/Ym97ApF6Ha" target="_blank" rel="noopener">
-      com.XenoGem 
-    </a>
-  </div>
-
-<div class="line">
-  <span>
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#00ff00" viewBox="0 0 512 512">
-      <!-- Джойстик -->
-      <path d="M256 48c-88.4 0-160 71.6-160 160s71.6 160 160 160 160-71.6 160-160S344.4 48 256 48zm-48 120c0-13.3 10.7-24 24-24s24 10.7 24 24-10.7 24-24 24-24-10.7-24-24zm96 64h-48c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h48c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16z"/>
-    </svg>
-    Steam
-  </span>
-  <a href="https://steamcommunity.com/id/necrosuit" target="_blank" rel="noopener">
-    stm.necroit
-  </a>
 </div>
-<style>
-.line {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 10px;
-}
-.line span {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  font-family: 'Courier New', monospace;
-  color: #00ff00;
-}
-.line a {
-  color: #00ff00;
-  text-decoration: none;
-  font-family: 'Courier New', monospace;
-}
-.line a:hover {
-  text-decoration: underline;
-}
-</style>
-</div>
-</div>
-
 <audio id="bgMusic" preload="auto">
   <source src="assets/music.mp3" type="audio/mpeg">
   Ваш браузер не поддерживает аудио.
 </audio>
-
 <div id="musicStatus" aria-hidden="true" style="display:none">music$mirrors-demo</div>
-
 <script>
 const preloader = document.getElementById('preloader');
 const site = document.getElementById('site');
 const panel = document.getElementById('terminalPanel');
 const music = document.getElementById('bgMusic');
 const musicStatus = document.getElementById('musicStatus');
-
 const bgCanvas = document.getElementById('bgCanvas');
 const bgCtx = bgCanvas.getContext('2d');
 const cursorCanvas = document.getElementById('cursorCanvas');
 const cursorCtx = cursorCanvas.getContext('2d');
-
 let W = window.innerWidth;
 let H = window.innerHeight;
 bgCanvas.width = W;
 bgCanvas.height = H;
 cursorCanvas.width = W;
 cursorCanvas.height = H;
-
 const particles = [];
 const particleCount = 120;
 const linkDistance = 120;
 const minDistance = 15;
 const controlPoint = {x: W/2, y: H/2};
 const highlightDistance = 100;
-
 class Particle {
   constructor() {
     this.x = Math.random()*W;
@@ -296,27 +212,20 @@ class Particle {
     this.y = Math.max(margin, Math.min(H - margin, this.y));
   }
   draw(ctx) {
-    const green = 150 + this.highlight*105;
-    ctx.fillStyle = `rgba(0,${green},0,0.8)`;
+    const gray = 150 + this.highlight*105;
+    ctx.fillStyle = `rgba(${gray},${gray},${gray},0.8)`;
     ctx.beginPath();
     ctx.arc(this.x, this.y, this.radius,0,Math.PI*2);
     ctx.fill();
   }
 }
-
 for(let i=0;i<particleCount;i++) particles.push(new Particle());
-
-window.addEventListener('mousemove', e=>{
-  controlPoint.x = e.clientX;
-  controlPoint.y = e.clientY;
-});
-
+window.addEventListener('mousemove', e=>{ controlPoint.x = e.clientX; controlPoint.y = e.clientY; });
 let cursorHover = false;
 document.querySelectorAll('a').forEach(link => {
   link.addEventListener('mouseenter', () => cursorHover = true);
   link.addEventListener('mouseleave', () => cursorHover = false);
 });
-
 function drawBackground(){
   bgCtx.clearRect(0,0,W,H);
   for(let i=0;i<particles.length;i++){
@@ -328,8 +237,8 @@ function drawBackground(){
       const dist = Math.hypot(dx,dy);
       if(dist < linkDistance && dist > minDistance){
         const alpha = 0.5*(1-dist/linkDistance) + 0.5*(a.highlight+b.highlight);
-        const green = Math.floor(150 + 105*((a.highlight+b.highlight)/2));
-        bgCtx.strokeStyle = `rgba(0,${green},0,${Math.min(1, alpha)})`;
+        const gray = Math.floor(150 + 105*((a.highlight+b.highlight)/2));
+        bgCtx.strokeStyle = `rgba(${gray},${gray},${gray},${Math.min(1, alpha)})`;
         bgCtx.lineWidth = 0.8;
         bgCtx.beginPath();
         bgCtx.moveTo(a.x, a.y);
@@ -340,46 +249,30 @@ function drawBackground(){
   }
   for(let p of particles){ p.update(); p.draw(bgCtx); }
 }
-
 let glowIntensity = 0;
 let targetGlow = 0;
-
 function drawCursor(){
   cursorCtx.clearRect(0,0,W,H);
   targetGlow = cursorHover ? 15 : 0;
   glowIntensity += (targetGlow - glowIntensity) * 0.1;
-  cursorCtx.fillStyle = '#0f0';
+  cursorCtx.fillStyle = '#cccccc';
   cursorCtx.beginPath();
   cursorCtx.arc(controlPoint.x, controlPoint.y, 5, 0, Math.PI*2);
   cursorCtx.fill();
   if(glowIntensity > 0.1){
     cursorCtx.save();
     cursorCtx.shadowBlur = glowIntensity;
-    cursorCtx.shadowColor = 'rgba(0,255,0,0.8)';
-    cursorCtx.fillStyle = 'rgba(0,255,0,0.2)';
+    cursorCtx.shadowColor = 'rgba(200,200,200,0.8)';
+    cursorCtx.fillStyle = 'rgba(200,200,200,0.2)';
     cursorCtx.beginPath();
     cursorCtx.arc(controlPoint.x, controlPoint.y, 5, 0, Math.PI*2);
     cursorCtx.fill();
     cursorCtx.restore();
   }
 }
-
-function animate(){
-  drawBackground();
-  drawCursor();
-  requestAnimationFrame(animate);
-}
+function animate(){ drawBackground(); drawCursor(); requestAnimationFrame(animate); }
 animate();
-
-window.addEventListener('resize', ()=>{
-  W = window.innerWidth;
-  H = window.innerHeight;
-  bgCanvas.width = W;
-  bgCanvas.height = H;
-  cursorCanvas.width = W;
-  cursorCanvas.height = H;
-});
-
+window.addEventListener('resize', ()=>{ W = window.innerWidth; H = window.innerHeight; bgCanvas.width = W; bgCanvas.height = H; cursorCanvas.width = W; cursorCanvas.height = H; });
 function startSite() {
   if (!site.classList.contains('preload-active')) return;
   site.classList.remove('preload-active');
@@ -387,9 +280,7 @@ function startSite() {
   preloader.style.opacity = '0';
   preloader.setAttribute('aria-hidden', 'true');
   setTimeout(()=>{ preloader.style.display = 'none'; }, 480);
-
   setTimeout(()=>panel.classList.add('visible'), 120);
-
   if (music) {
     music.volume = 0.1;
     const playPromise = music.play();
@@ -399,15 +290,10 @@ function startSite() {
     }
   }
 }
-
 preloader.addEventListener('click', startSite);
-preloader.addEventListener('keydown', (e)=>{
-  if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); startSite(); }
-});
+preloader.addEventListener('keydown', (e)=>{ if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); startSite(); } });
 preloader.setAttribute('tabindex','0');
 preloader.focus();
-
 </script>
-
 </body>
 </html>
